# thought-leadership

./: .env.example  .gitignore  README.md  netlify.env.example  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: ops-manual.yml  tests.yml  weekly-medium-engine.yml
agent/: __init__.py  approvals.py  artifacts.py  cli.py  config.py  db.py  idea_engine.py  pipeline.py  publisher.py  qa.py  review_portal.py  review_renderer.py  scheduler.py  source_verify.py  states.py  style_check.py  style_extractor.py  writer.py
config/: persona.md  roadmap.yaml  source_allowlist.yaml  style_guide.md
dashboard/: app.js  index.html
netlify/functions/: list-runs.js  trigger-workflow.js
templates/: review.html.j2
tests/: test_approval_blocking.py  test_pipeline_blocking.py  test_qa.py  test_scheduler.py  test_states.py
